<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_contact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="20dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewBTMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="2.7"
                    android:text="@string/send_message"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewBTMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:drawableLeft="@drawable/ic_mobile_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/mobile_number"
                android:textAppearance="?android:textAppearance" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_message_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/message"
                android:textAppearance="?android:textAppearance" />

            <EditText
                android:id="@+id/editTextBTMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/ed_entry_with_border"
                android:gravity="start"
                android:hint="@string/enter_message"
                android:lines="6"
                android:padding="10dp"
                android:textAppearance="?android:textAppearance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBTSendMessge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_message_white_24dp"
                    android:drawablePadding="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="10dp"

                    android:text="@string/message"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnBTSendWhatsApp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_whatsapp_white"
                    android:drawablePadding="@dimen/layout_margin_5"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/layout_margin_10"
                    android:text="@string/whatsApp"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBTCall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin_5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_call_white_24dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/layout_margin_10"

                    android:text="@string/phone_call"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>